<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/black_background">
    <TextView android:layout_height="wrap_content" android:layout_alignParentTop="true" android:id="@+id/login_header_lbl" android:text="@string/login_header_txt" android:layout_width="match_parent" android:paddingTop="20dp"></TextView>
    <LinearLayout android:layout_below="@+id/login_header_lbl" android:layout_width="wrap_content" android:layout_alignLeft="@+id/login_header_lbl" android:layout_alignRight="@+id/login_header_lbl" android:id="@+id/login_panel_layout" android:orientation="vertical" android:layout_height="match_parent" >
        <TextView android:layout_marginLeft="5dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="20dip" android:text="@string/user_name_txt" android:id="@+id/user_name_lbl"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/user_name_txt" android:gravity="center" android:hint="@string/user_name_hint_txt"></EditText>
        <TextView android:layout_marginTop="10dip" android:id="@+id/user_pass_lbl" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/login_pass_txt"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/user_pass_txt" android:hint="@string/user_pass_hint" android:gravity="center" android:inputType="textPassword"></EditText>
        <Button android:text="@string/login_btn_lbl" android:id="@+id/login_btn" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="20dip"></Button>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_alignParentBottom="true" android:layout_width="match_parent" android:layout_below="@+id/login_panel_layout" android:orientation="horizontal">
    </LinearLayout>
</RelativeLayout>



